--- a/cryptoquartz/style.css
+++ b/cryptoquartz/style.css
@@ -7,6 +7,7 @@ body {
   font-family: Necto Mono;
   font-size: 16px;
   line-height: 1.25;
+  margin: 0 auto;
 
   background-color: #f8f8f8;
   color: #000;
