--- a/cryptoquartz/style.css
+++ b/cryptoquartz/style.css
@@ -62,3 +62,17 @@ section canvas {
   max-width: 100%;
   max-height: 100%;
 }
+
+button {
+  appearance: none;
+  padding: 16px 24px;
+  margin-bottom: 50px;
+  display: block;
+  width: 100%;
+  font-family: Necto Mono;
+  font-size: 24px;
+  border: none;
+  background: black;
+  color: #fff;
+  cursor: pointer;
+}
