set theme when changing slides

--- a/cloth-studios/style.css
+++ b/cloth-studios/style.css
@@ -13,6 +13,16 @@
   margin: 0;
 }
 
+body.cream {
+  --background: #d7d7be;
+  --highlight: #000000;
+}
+
+body.dark {
+  --background: #222222;
+  --highlight: #ffffff;
+}
+
 body {
   font-family: 'Porpora';
   font-size: 24px;
@@ -22,6 +32,7 @@ body {
   background-image: linear-gradient(transparent 50%, rgba(0, 0, 0, 0.25));
   color: var(--highlight);
   height: 100vh;
+  transition: background-color 0.5s, color 0.5s;
 }
 
 header {
@@ -44,6 +55,8 @@ nav a {
   margin: 0 0 2px 0;
 
   border: 2px solid var(--highlight);
+
+  transition: background-color 0.2s, color 0.2s;
 }
 
 nav {
@@ -64,4 +77,15 @@ nav a:last-child {
 nav a:hover {
   background-color: transparent;
   color: var(--highlight);
+}
+
+section {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+section img {
+  max-height: 75vh;
 }
