--- a/cloth-studios/style.css
+++ b/cloth-studios/style.css
@@ -81,9 +81,7 @@ nav a:hover {
 
 section {
   min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow: hidden;
 }
 
 section img {
